--- a/todo.txt
+++ b/todo.txt
@@ -3,4 +3,5 @@ export -> affichage dans ordre ascii
 export a -> crée une valeur dans l’env qui est affichée par export mais pas env
 export USER -> ne change pas la valeur déjà présente
 deux heredocs-> beugue
+leaks quand on exit
 makefile de printf
