Update du fichier todo

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,6 @@ exit | exit
 export -> affichage dans ordre ascii
 export a -> crée une valeur dans l’env qui est affichée par export mais pas env
 export USER -> ne change pas la valeur déjà présente
-deux heredocs-> beugue
+$?=1 est présent dans l’environnement des enfants
 leaks quand on exit
 makefile de printf
