La var d’env $? n’est plus passée aux enfants

--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,10 @@
 exit | exit
+affichage quand ctrl_d
 export -> affichage dans ordre ascii
 export a -> crée une valeur dans l’env qui est affichée par export mais pas env
 export USER -> ne change pas la valeur déjà présente
-$?=1 est présent dans l’environnement des enfants
 leaks quand on exit
 makefile de printf
+	export LS="   ls "
+	export a="objs"
+	$LS$a -> ne fait rien
